--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -90,25 +90,20 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Beerstrot Birreria</h2>
-                <p>Tutti i Venerdì e i Sabati, dalle 20:00 all'1:00, nella casetta adiacente all'aia.</p>
-                <p>Un'ampia selezione di birre artigianali: alla spina e in bottiglia; un po' di vino.</p>
-                    <p>Se gradite potete stuzzicare o mangiare qualcosa, ma lo serviamo nelle confezioni da asporto.</p>
+                <h2>Birra, Stuzzichino o Cena Informale?</h2>
+                <p>Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato.</p>
+                <p>CA' VECCHIA BEERSTROT apre le porte della casetta sull'aia!</p>
                 <hr>
-                <h2>Come Funziona</h2>
-                <ul>
-                    <li>Apriamo alle 20:00</li>
-                    <li>Chiudiamo all'1:00 (non un minuto dopo)</li>
-                    <li>Serviamo l'ultima bevuta alle 00:45</li>
-                    <li>Serviamo cibo fino alle 23:00 (nelle confezioni da asporto)</li>
-                    <li>I tavoli potranno essere condivisi con altri</li>
-                    <li>Non prendiamo prenotazioni</li>
-                    <li>Non facciamo servizio al tavolo</li>
-                    <li>Si ordina al bancone</li>
-                    <li>Non forniamo coperto e posate. il tavagliolo, quello si!</li>
-                </ul>
+                <h2>Quando</h2>
+                <p>Ogni Venerdì e Sabato, dalle 20:00 alle 01:00.</p>
+                <hr>
+                <h2>Come</h2>
+                <p>Senza prenotazione, ordinando al bancone.</p>
+                <p>Il cibo viene servito, in confezione da asporto, fino alle 23:00. Le birre, nei bicchieri di vetro, fino alle 00:45.</p>
+                <p>Non forniamo il coperto, ma il tovagliolo, quello sì!</p>
                 <hr>
                 <h2>Un Posto Incantevole</h2>
+                <p>La casetta sull'aia è un posto caldo, accogliente e magico.</p>
                 <ul class="small-block-grid-1">
                     <li><img src="http://www.beerstrot.it/asset/img/large/casetta.interno.jpg" alt="Casetta: interno">
                     </li>
