--- a/eventi/index.html
+++ b/eventi/index.html
@@ -69,11 +69,26 @@
     </header>
     <div class="row">
         <div class="medium-12 large-12 columns">
-            <article class="row">  
+            <article class="row">
+                <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">18 Nov 2017</h3>
+                    <h5>Orario: 20:00</h5>
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <a href="http://www.beerstrot.it/asset/img/large/casetta-lato.jpg" alt="Birreria Beerstrot"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/casetta-lato-th.jpg" alt="Birreria Beerstrot"></a>
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Birra, Stuzzichino o Cena Informale?</h2>
+                    <p>Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato.</p>
+                    <a href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri l'evento &rarr;</a>
+                </div>
+            </article>
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Dic 2016</h3>
                     <h5>Orario: 20:30</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/san-silvestro-2016.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/san-silvestro-2016-th.jpg" alt="Cena di San Silvestro"></a>
@@ -89,11 +104,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">11 Nov 2016</h3>
                     <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/cena-san-martino.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/cena-san-martino-2016-th.jpg" alt="Cena di San Martino Hamburger con Funghi"></a>
@@ -109,11 +124,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Lug 2016</h3>
                     <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/flora-e-fauna-concerto-live.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/flora-e-fauna-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
@@ -129,11 +144,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">27/28 Marzo</h3>
                     <h5>Orario: dalle 12:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/pasqua.html">
@@ -151,11 +166,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Dicembre 2015</h3>
                     <h5>Orario: 21:15</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/san-silvestro.html">
@@ -173,11 +188,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">11 Novembre 2015</h3>
                     <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/san-martino.html">
@@ -195,11 +210,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">31 Ottobre 2015</h3>
                     <h5>Orario: dalle 23:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/halloween.html">
@@ -217,11 +232,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">26 Settembre 2015</h3>
                     <h5>Orario: dalle 16:30</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/instagramer.html">
@@ -239,11 +254,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">4-5 Settembre 2015</h3>
                     <h5>Orario: dalle 19:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/beerfest.html">
@@ -266,11 +281,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">21 Giu 2015</h3>
                     <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/festa-estate-concerto-live.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
@@ -286,11 +301,11 @@
                     <hr>
                 </div>
             </div>
-            <article class="row">  
+            <article class="row">
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
                     <h5>Orario: 17:00-19:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://www.beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/apertura-th.jpg" alt="Apertura Ca' Vecchia Beerstrot"></a>
@@ -330,7 +345,7 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
+                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div class="row collapse">
                         <div class="small-8 columns">
                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="La tua email">
