--- a/eventi/index.html
+++ b/eventi/index.html
@@ -76,7 +76,7 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://www.beerstrot.it/asset/img/large/casetta-lato.jpg" alt="Birreria Beerstrot"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/casetta-lato-th.jpg" alt="Birreria Beerstrot"></a>
+                    <a href="http://www.beerstrot.it/eventi/beerstrot-birreria.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/casetta-lato-th.jpg" alt="Birreria Beerstrot"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Birra, Stuzzichino o Cena Informale?</h2>
