--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -81,8 +81,8 @@
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
-                                <h5 class="date" style="margin-top: 0.5em;">18 Novembre 2017</h5>
-                                <h5>Dalle 20:00 all'1:00</h5>
+                                <h5 class="date" style="margin-top: 0.5em;">Dal 18 Novembre 2017</h5>
+                                <h5>Dalle 20:00 alle 01:00</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra, Stuzzichino o Cena Informale?</h2>
                 <p>Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato.</p>
-                <p>CA' VECCHIA BEERSTROT apre le porte della casetta sull'aia!</p>
+                <p>Ca' Vecchia Beerstrot apre le porte della <strong>Casetta sull'aia</strong>.</p>
                 <hr>
                 <h2>Quando</h2>
                 <p>Ogni Venerdì e Sabato, dalle 20:00 alle 01:00.</p>
