--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -92,7 +92,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra, Stuzzichino o Cena Informale?</h2>
                 <p>Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato.</p>
-                <p>Ca' Vecchia Beerstrot apre le porte della <strong>Casetta sull'aia</strong>.</p>
+                <p>Ca' Vecchia Beerstrot apre le porte della <strong>Casetta sull'Aia</strong>.</p>
                 <hr>
                 <h2>Quando</h2>
                 <p>Ogni Venerdì e Sabato, dalle 20:00 alle 01:00.</p>
