--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -99,8 +99,9 @@
                 <hr>
                 <h2>Come</h2>
                 <p>Senza prenotazione, ordinando al bancone.</p>
-                <p>Il cibo viene servito, in confezione da asporto, fino alle 23:00. Le birre, nei bicchieri di vetro, fino alle 00:45.</p>
-                <p>Non forniamo il coperto, ma il tovagliolo, quello sì!</p>
+                <p>Le birre vengono servite nei bicchieri di vetro, fino alle 00:45.</p>
+                <p>Il cibo viene servito in confezione da asporto, fino alle 23:00. </p>
+                <p>Non forniamo il coperto, ma il tovagliolo, quello sì.</p>
                 <hr>
                 <h2>Un Posto Incantevole</h2>
                 <p>La casetta sull'aia è un posto caldo, accogliente e magico.</p>
