--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -98,10 +98,12 @@
                 <p>Ogni Venerdì e Sabato, dalle 20:00 alle 01:00.</p>
                 <hr>
                 <h2>Come</h2>
-                <p>Senza prenotazione, ordinando al bancone.</p>
-                <p>Le birre vengono servite nei bicchieri di vetro, fino alle 00:45.</p>
-                <p>Il cibo viene servito in confezione da asporto, fino alle 23:00. </p>
-                <p>Non forniamo il coperto, ma il tovagliolo, quello sì.</p>
+                <ul>
+                    <li>Senza prenotazione, ordinando al bancone</li>
+                    <li>Le birre vengono servite nei bicchieri di vetro, fino alle 00:45</li>
+                    <li>Il cibo viene servito in confezione da asporto, fino alle 23:00</li>
+                    <li>Non forniamo il coperto, ma il tovagliolo, quello sì!</li>
+                </ul>
                 <hr>
                 <h2>Un Posto Incantevole</h2>
                 <p>La casetta sull'aia è un posto caldo, accogliente e magico.</p>
