--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Apre il Beerstrot Birreria</title>
-    <meta name="description" content="18 Novembre 2017 alle ore 20:00. Apre il Beerstrot Birreria"/>
+    <title>Beerstrot | Apre la Casetta sull'Aia</title>
+    <meta name="description" content="Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2017"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/beerstrot-birreria.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Cena di San Martino 2016"/>
-    <meta property="og:description" content="18 Novembre dalle ore 20:00. Apre il Beerstrot Birreria"/>
+    <meta property="og:title" content="Dopo Cena al Beerstrot"/>
+    <meta property="og:description" content="Per chi ha voglia di una Birra Artigianale dopo cena, di uno Stuzzichino veloce o per chi ha un improvviso desiderio di Hamburger ma non ha prenotato."/>
     <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/casetta-lato.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920">
