--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
         </div>
     </header>
 <!-- fine header -->
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Orari</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h3>Ristorante</h3>
+                <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></h4>
+                <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 389 6607722</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> Prenota</a></span>
+                <br>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <h3>Casetta sull'Aia</h3>
+                <p><strong>Venerdì</strong> e <strong>Sabato</strong><br>Dalle <strong>20:00</strong> alle <strong>01:00</strong></p>
+                <a itemprop="menu" role="button" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri la Casetta sull'Aia &rarr;</a>
+
+            </div>
+        </div>
+    </div>
     <div class="panel-home-2n">
         <div class="row">
             <div class="medium-12 large-12 columns">
@@ -221,7 +243,7 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
+                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div class="row collapse">
                         <div class="small-8 columns">
                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="La tua email">
