--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -75,7 +75,7 @@
                <header>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
-                            <h1>Dopo Cena al Beerstrot</h1>
+                            <h1>Casetta sull'Aia</h1>
                         </div>
                     </div>
                     <div class="row">
