--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
                 <h3>Ristorante</h3>
                 <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></h4>
                 <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 389 6607722</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> Prenota</a></span>
-                <br>
+                <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> Prenota</a><br></span>
+
             </div>
             <div class="medium-6 large-6 columns">
                 <h3>Casetta sull'Aia</h3>
                 <p><strong>Venerdì</strong> e <strong>Sabato</strong><br>Dalle <strong>20:00</strong> alle <strong>01:00</strong></p>
                 <a itemprop="menu" role="button" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri la Casetta sull'Aia &rarr;</a>
-
             </div>
         </div>
     </div>
