--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="medium-6 large-6 columns">
                 <h3>Ca' Vecchia Beerstrot</h3>
-                <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></h4>
+                <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
                 <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 389 6607722</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a><br><br></span>
 
