--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -99,14 +99,14 @@
                 <hr>
                 <h2>Come</h2>
                 <ul>
-                    <li>Senza prenotazione, ordinando al bancone</li>
-                    <li>Le birre vengono servite nei bicchieri di vetro, fino alle 00:45</li>
-                    <li>Il cibo viene servito in confezione da asporto, fino alle 23:00</li>
+                    <li>Senza prenotazione, ordinando al bancone.</li>
+                    <li>Le birre vengono servite fino alle 00:45, nei bicchieri di vetro.</li>
+                    <li>Il cibo viene servito fino alle 23:00, in confezione da asporto.</li>
                     <li>Non forniamo il coperto, ma il tovagliolo, quello sì!</li>
                 </ul>
                 <hr>
                 <h2>Un Posto Incantevole</h2>
-                <p>La casetta sull'aia è un posto caldo, accogliente e magico.</p>
+                <p>La Casetta sull'Aia è un posto caldo, accogliente e magico.</p>
                 <ul class="small-block-grid-1">
                     <li><img src="http://www.beerstrot.it/asset/img/large/casetta.interno.jpg" alt="Casetta: interno">
                     </li>
