--- a/asporto/index.html
+++ b/asporto/index.html
@@ -89,7 +89,7 @@
             <div class="medium-12 large-12 columns">
                 <h1>Asporto</h1>
                 <hr>
-            </div>     
+            </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
@@ -105,12 +105,12 @@
         <div class="row show-for-small">
             <div class="medium-12 large-12 columns">
                 <a role="button" href="tel:+393896607722" class="button right"><i class="fi-telephone"></i> Chiama</a>
-            </div> 
+            </div>
         </div>
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <hr>
-            </div> 
+            </div>
         </div>
     </div>
     <div class="tabs-content" id="menupage-text">
@@ -118,25 +118,25 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Alette di Pollo &emsp; 5,5</h3>    
+                            <h3>Alette di Pollo &emsp; 5,5</h3>
                             <p> in salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Bocconcini di Pollo &emsp; 5</h3>    
+                            <h3>Bocconcini di Pollo &emsp; 5</h3>
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
                             <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                         </li>
                         <li>
-                            <h3>Olive all'Ascolana &emsp; 5</h3>    
+                            <h3>Olive all'Ascolana &emsp; 5</h3>
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Dadolata &emsp; 4,5</h3>    
+                            <h3>Dadolata &emsp; 4,5</h3>
                             <p>cubetti di zucca e ceci con spezie</p>
                         </li>
                         <li>
@@ -144,15 +144,15 @@
                             <p>cipolla gialla impanata e fritta</p>
                         </li>
                         <li>
-                            <h3>Nachos Supreme &emsp; 5,5</h3>    
+                            <h3>Nachos Supreme &emsp; 5,5</h3>
                             <p>tortillas, cheddar, peperoncino fresco</p>
                         </li>
                         <li>
-                            <h3>Hummus &emsp; 5</h3>    
+                            <h3>Hummus &emsp; 5</h3>
                             <p>hummus di ceci e zucca, servito con tortillas</p>
                         </li>
                         <li>
-                            <h3>Patate Fritte &emsp; 4</h3>    
+                            <h3>Patate Fritte &emsp; 4</h3>
                             <p>patate fritte con buccia</p>
                         </li>
                         <li>
@@ -166,69 +166,69 @@
                     <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>    
+                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
                             <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>    
+                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
-                            <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>    
+                            <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Emiliano &emsp; 10,5 / doppio 14,9</h3> 
+                            <h3>Emiliano &emsp; 10,5 / doppio 14,9</h3>
                             <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
                         </li>
                         <li>
-                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3> 
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
                             <p>180 grammi di manzo, montasio DOP, crema di porcini, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
+                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>    
+                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>
                             <p>180 grammi di manzo, gorgonzola, crema di zucca, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Vegetariano &emsp; 8</h3>    
-                            <p>180 grammi di hamburger di quinoa, rucola, cipolla; composta di rape rosse, senape e miele</p>
+                            <h3>Vegetariano &emsp; 8</h3>
+                            <p>hamburger di borlotti, pesto di pinoli e cavolo nero, julienne di cipolla fritta</p>
                         </li>
                         <li>
-                            <h3>Mini Burger &emsp; 6</h3>    
+                            <h3>Mini Burger &emsp; 6</h3>
                             <p>100 grammi di manzo, cheddar</p>
                         </li>
-                    </ul>                      
-                </div>   
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Costine &emsp; 11,5</h3>    
+                            <h3>Costine &emsp; 11,5</h3>
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
                         <li>
-                            <h3>Gulasch &emsp; 10,5</h3>    
+                            <h3>Gulasch &emsp; 10,5</h3>
                             <p>spezzatino di manzo e patate <br>servito in pagnotta</p>
                         </li>
                         <li>
-                            <h3>Tagliata di Picanha &emsp; 19</h3>    
+                            <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Cotoletta alla Milanese &emsp; 20</h3>    
+                            <h3>Cotoletta alla Milanese &emsp; 20</h3>
                             <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
                         </li>
                         <li>
-                            <h3>T-Bone Steak &emsp; 4 per etto</h3>    
+                            <h3>T-Bone Steak &emsp; 4 per etto</h3>
                             <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
                         </li>
-                    </ul>                      
+                    </ul>
                 </div>
             </div>
             <div class="row">
@@ -252,12 +252,12 @@
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
                 <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button right"><i class="fi-telephone"></i> Chiama</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> 389 6607722</a></span>      
+                <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> 389 6607722</a></span>
             </div>
         </div>
 <!-- call to action fine -->
@@ -284,7 +284,7 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
+                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div class="row collapse">
                         <div class="small-8 columns">
                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="La tua email">
