--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
                 <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
                 <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 389 6607722</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a><br><br></span>
-
             </div>
             <div class="medium-6 large-6 columns">
                 <h2>Casetta sull'Aia</h2>
                 <p><strong>Venerdì</strong> e <strong>Sabato</strong><br>Dalle <strong>20:00</strong> alle <strong>01:00</strong></p>
-                <a itemprop="menu" role="button" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri la Casetta sull'Aia &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/eventi/beerstrot-birreria.html">Scopri la Casetta sull'Aia &rarr;</a>
             </div>
         </div>
     </div>
@@ -178,7 +177,7 @@
                 <p>Sei social?</p>
                 <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code>.</p>
                 <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
-                <a role="button" href="http://www.beerstrot.it/social/">Guarda I Nostri Scatti &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/social/">Guarda le Foto &rarr;</a>
             </div>
         </div>
     </div>
