--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="medium-6 large-6 columns">
                 <h2>Ca' Vecchia Beerstrot</h2>
                 <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
-                <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 389 6607722</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+393896607722" class="button"><i class="fi-telephone"></i> 389 6607722</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+393896607722" class="button extra-space-from-tabs"><i class="fi-telephone"></i> Prenota</a><br><br></span>
             </div>
             <div class="medium-6 large-6 columns">
