--- a/menu/index.html
+++ b/menu/index.html
@@ -428,8 +428,8 @@
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Spumante Prosecco Extra Dry &emsp;14</h3>
-                            <p>val d'oca</p>
+                            <h3>Prosecco Extra Dry &emsp;14</h3>
+                            <p>bervini</p>
                         </li>
                     </ul>
                 </div>
